# procrustes

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  LICENSE-THIRDPARTY  README.md  deny.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
benches/: alignment.rs
examples/: align_random.rs  bench_runner.rs
src/: gpa.rs  lap.rs  lib.rs  orthogonal.rs  signed_permutation.rs
tests/: bit_parity.rs  gpa.rs  gpa_parity.rs  rotation_only.rs  scipy_parity.rs  sign_align.rs
