[package]
name = "procrustes"
version = "0.1.0"
authors = ["Paweł Lenartowicz"]
edition = "2021"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
description = "Orthogonal Procrustes and signed-permutation alignment via faer"
keywords = ["procrustes", "alignment", "linear-algebra", "shape-analysis", "faer"]
categories = ["science", "algorithms", "mathematics"]
readme = "README.md"
exclude = ["PUBLICATION_SPEC.md"]
repository = "https://github.com/pawlenartowicz/orthogonal_procrustes"

[dependencies]
faer = "0.24"
thiserror = "1"

[dev-dependencies]
rand = "0.8"
rand_chacha = "0.3"

[lints.rust]
unsafe_code = "forbid"
missing_docs = "deny"

[lints.clippy]
all = "deny"
pedantic = "warn"
